docs_exported/1.18/sixikutils/docs/mods/sixikutils/utils/game/Game.md
# Game

## Importing the class

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import mods.crafttweakerutils.game.Game;
```


## Static Methods

:::group{name=getDate}

Return Type: int

```zenscript
// Game.getDate() as int

Game.getDate();
```

:::

:::group{name=getDay}

Return Type: int

```zenscript
// Game.getDay() as int

Game.getDay();
```

:::

:::group{name=getHours}

Return Type: int

```zenscript
// Game.getHours() as int

Game.getHours();
```

:::

:::group{name=getLang}

Return Type: string

```zenscript
// Game.getLang() as string

Game.getLang();
```

:::

:::group{name=getLanguageTag}

Return Type: string

```zenscript
// Game.getLanguageTag() as string

Game.getLanguageTag();
```

:::

:::group{name=getMinutes}

Return Type: int

```zenscript
// Game.getMinutes() as int

Game.getMinutes();
```

:::

:::group{name=getMonth}

Return Type: int

```zenscript
// Game.getMonth() as int

Game.getMonth();
```

:::

:::group{name=getSeconds}

Return Type: int

```zenscript
// Game.getSeconds() as int

Game.getSeconds();
```

:::

:::group{name=getTime}

Return Type: long

```zenscript
// Game.getTime() as long

Game.getTime();
```

:::

:::group{name=getTimezoneOffset}

Return Type: int

```zenscript
// Game.getTimezoneOffset() as int

Game.getTimezoneOffset();
```

:::

:::group{name=getYear}

Return Type: int

```zenscript
// Game.getYear() as int

Game.getYear();
```

:::

