docs_exported/1.19/sixikutils/docs/mods/sixikutils/utils/game/Game.md
# Game

## Importing the class

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import mods.crafttweakerutils.game.Game;
```


## Static Methods

:::group{name=getDate}



Returns: Full real date yyyy/MM/dd  
Return Type: int

```zenscript
// Game.getDate() as int

Game.getDate();
```

:::

:::group{name=getDay}



Returns: Real Day  
Return Type: int

```zenscript
// Game.getDay() as int

Game.getDay();
```

:::

:::group{name=getHours}



Returns: Real Hours  
Return Type: int

```zenscript
// Game.getHours() as int

Game.getHours();
```

:::

:::group{name=getLang}



Returns: The selected language of the player RU/EN/UA/...  
Return Type: string

```zenscript
// Game.getLang() as string

Game.getLang();
```

:::

:::group{name=getLanguageTag}



Returns: The selected language of the player ru_RU/en_EN/ua_UA/...  
Return Type: string

```zenscript
// Game.getLanguageTag() as string

Game.getLanguageTag();
```

:::

:::group{name=getMinutes}



Returns: Real Minutes  
Return Type: int

```zenscript
// Game.getMinutes() as int

Game.getMinutes();
```

:::

:::group{name=getMonth}



Returns: Real Month  
Return Type: int

```zenscript
// Game.getMonth() as int

Game.getMonth();
```

:::

:::group{name=getSeconds}



Returns: Real Seconds  
Return Type: int

```zenscript
// Game.getSeconds() as int

Game.getSeconds();
```

:::

:::group{name=getTime}



Returns: Full real time HH:mm:ss  
Return Type: long

```zenscript
// Game.getTime() as long

Game.getTime();
```

:::

:::group{name=getTimezoneOffset}



Returns: Real TimezoneOffset  
Return Type: int

```zenscript
// Game.getTimezoneOffset() as int

Game.getTimezoneOffset();
```

:::

:::group{name=getYear}



Returns: Real Year  
Return Type: int

```zenscript
// Game.getYear() as int

Game.getYear();
```

:::

